--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root{
     --primary-color: #300E04;
-    --secondary-color: #DFB691;
+    --secondary-color: #d6bca3;
     --highlight-color: #892A00;
     --font-family: 'Roboto', Arial, sans-serif;
     font-family: var(--font-family);
@@ -31,44 +31,60 @@ html, body{
     display: flex;
     flex-direction: column;
 }
-.form, .heading-area, .register-area{
-  width: auto;
-}
-header{
-    width: 100%;
-    text-align: center;
+.form-div, .heading-area, .register-area{
+    width: auto;
+    padding: 40px;
 
 }
+.logo-header{
+    width: 100%;
+    text-align: center;
+    padding: 20px 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 .form-div{
-    height: 100%;
     display: flex;
-    padding: 40px;
     flex-direction: column;
-    box-shadow: 5px 8px black;
+    flex: 1;
+
+    margin: 0px 0px 5px 0;
+    padding-right: 240px;
+    box-shadow: 0 5px rgba(0, 0, 0, 0.2);
 }
 form{
     display: grid;
-    grid-template-columns: auto auto;
+    margin-right: auto;
+    margin-left: 0;
+
+    grid-template-columns: repeat(2, minmax(220px, 1fr));
+    gap: 16px 100px;
     width: 100%;
-    height: 100%;
 }
 .field{
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
+    gap: 6px;
 }
 .field input{
-    margin-bottom: 20px;
-    padding: 10px;
-    width: 200px;
+    padding: 5px 10px;
+    width: 100%;
+    background-color: rgb(248, 248, 248);
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+.field input:focus{
+    outline: none;
+    border-color: var(--highlight-color);
+    box-shadow: 0 0 5px var(--highlight-color);
 }
 .heading-area{
-    height: 100%;
-    padding: 40px;
+
     background-color: var(--secondary-color);
 }
 .register-area{
-    height: 100%;
-    padding: 40px;
+
     background-color: var(--secondary-color);
     display: flex;
     flex-direction: column;
