--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,14 @@ html, body{
 
 }
 .logo-header{
+    font-family: "Oswald", sans-serif;
+    font-size: 42px;
+    color: white;
+
     width: 100%;
     text-align: center;
-    padding: 20px 0;
+    padding: 10px 0;
+    margin-top: 200px;
     background-color: rgba(0, 0, 0, 0.5);
 }
 .form-div{
